high contrast and wcag contrast bug fixes for docs

--- a/sites/fast-website/src/app/css/style.css
+++ b/sites/fast-website/src/app/css/style.css
@@ -36,6 +36,13 @@
     padding: 0;
 }
 
+@media (forced-colors: active) {
+    .section,
+    .fast-frame-section {
+        color: CanvasText;
+    }
+}
+
 @media screen and (min-width: 900px) {
     .section,
     .fast-frame-section {
